ADHPAdS04_텍스트에어리어 추가

--- a/mobile/20_UI_ADHPAdS04.html
+++ b/mobile/20_UI_ADHPAdS04.html
@@ -120,6 +120,14 @@
                                                 </li>
                                             </ul>
                                         </fieldset>
+                                        <div class="text_form_box type_qna">
+                                            <div class="text_form_inner">
+                                                <textarea title="활동내용" placeholder="기타 의견이 있으면 입력해 주세요." required=""></textarea>
+                                            </div>
+                                            <div class="text_info">
+                                                <p class="count_info"><span class="result_byte">41</span> / <span class="max_byte">1,000</span> Byte</p>
+                                            </div>
+                                        </div>
                                     </dd>
                                     <dt id="que2_label">
                                         <span>2.</span>
@@ -173,6 +181,14 @@
                                                 </li>
                                             </ul>
                                         </fieldset>
+                                        <div class="text_form_box type_qna">
+                                            <div class="text_form_inner">
+                                                <textarea title="활동내용" placeholder="기타 의견이 있으면 입력해 주세요." required=""></textarea>
+                                            </div>
+                                            <div class="text_info">
+                                                <p class="count_info"><span class="result_byte">41</span> / <span class="max_byte">1,000</span> Byte</p>
+                                            </div>
+                                        </div>
                                     </dd>
                                     <dt id="que3_label">
                                         <span>3.</span>
@@ -226,6 +242,14 @@
                                                 </li>
                                             </ul>
                                         </fieldset>
+                                        <div class="text_form_box type_qna">
+                                            <div class="text_form_inner">
+                                                <textarea title="활동내용" placeholder="기타 의견이 있으면 입력해 주세요." required=""></textarea>
+                                            </div>
+                                            <div class="text_info">
+                                                <p class="count_info"><span class="result_byte">41</span> / <span class="max_byte">1,000</span> Byte</p>
+                                            </div>
+                                        </div>
                                     </dd>
                                 </dl>
                             </div>
