--- a/pc/20_UI_ADHPAdS04.html
+++ b/pc/20_UI_ADHPAdS04.html
@@ -132,6 +132,14 @@
                                                                     </div>
                                                                 </li>
                                                             </ul>
+                                                            <div class="text_form_box type_full">
+                                                                <div class="text_form_inner">
+                                                                    <textarea title="활동내용" placeholder="기타 의견이 있으면 입력해 주세요." required=""></textarea>
+                                                                </div>
+                                                                <div class="text_info">
+                                                                    <p class="count_info"><span class="result_byte">41</span> / <span class="max_byte">1,000</span> Byte</p>
+                                                                </div>
+                                                            </div>
                                                         </fieldset>
                                                     </div>
                                                 </li>
@@ -182,6 +190,14 @@
                                                                     </div>
                                                                 </li>
                                                             </ul>
+                                                            <div class="text_form_box type_full">
+                                                                <div class="text_form_inner">
+                                                                    <textarea title="활동내용" placeholder="기타 의견이 있으면 입력해 주세요." required=""></textarea>
+                                                                </div>
+                                                                <div class="text_info">
+                                                                    <p class="count_info"><span class="result_byte">41</span> / <span class="max_byte">1,000</span> Byte</p>
+                                                                </div>
+                                                            </div>
                                                         </fieldset>
                                                     </div>
                                                 </li>
@@ -232,6 +248,14 @@
                                                                     </div>
                                                                 </li>
                                                             </ul>
+                                                            <div class="text_form_box type_full">
+                                                                <div class="text_form_inner">
+                                                                    <textarea title="활동내용" placeholder="기타 의견이 있으면 입력해 주세요." required=""></textarea>
+                                                                </div>
+                                                                <div class="text_info">
+                                                                    <p class="count_info"><span class="result_byte">41</span> / <span class="max_byte">1,000</span> Byte</p>
+                                                                </div>
+                                                            </div>
                                                         </fieldset>
                                                     </div>
                                                 </li>
