--- a/pc/UI_ADHPCbM10.html
+++ b/pc/UI_ADHPCbM10.html
@@ -114,10 +114,10 @@
                                                                     <span class="sr_only">필수 입력</span>
                                                                 </th>
                                                                 <td colspan="3">
-                                                                    <fieldset class="box_radio_group" disabled>
+                                                                    <fieldset class="box_radio_group">
                                                                         <legend class="sr_only">참여자 분류 선택</legend>
                                                                         <div class="box_chk-group radio_group">
-                                                                            <input type="radio" class="ptcpType1" id="ptcpType1" name="ptcpType" value="graduate" checked>
+                                                                            <input type="radio" class="ptcpType1" id="ptcpType1" name="ptcpType" value="graduate" checked disabled>
                                                                             <label for="ptcpType1" class="unselect_label">
                                                                                 <span class="sr_only">선택지 1:</span>
                                                                                 <span class="label_text">&#9312; 2025년 재학생 맞춤형 고용서비스 사업 운영 대학(원)의 재학·휴학·수료 청년</span>
@@ -125,7 +125,7 @@
                                                                         </div>
 
                                                                         <div class="box_chk-group radio_group">
-                                                                            <input type="radio" class="ptcpType2" id="ptcpType2" name="ptcpType" value="youth">
+                                                                            <input type="radio" class="ptcpType2" id="ptcpType2" name="ptcpType" value="youth" disabled>
                                                                             <label for="ptcpType2" class="unselect_label">
                                                                                 <span class="sr_only">선택지 2:</span>
                                                                                 <span class="label_text">&#9313; ①에 해당하지 않는 만 18~34세의 최종학력 고등학교 졸업 이하인 미취업(고용보험 기준) 청년</span>
