--- a/pc/06_UI_ADHPAbS04.html
+++ b/pc/06_UI_ADHPAbS04.html
@@ -109,10 +109,10 @@
                                                                     <span class="sr_only">필수 입력</span>
                                                                 </th>
                                                                 <td colspan="3">
-                                                                    <fieldset class="box_radio_group" style="pointer-events: none;">
+                                                                    <fieldset class="box_radio_group">
                                                                         <legend class="sr_only">참여자 분류 선택</legend>
                                                                         <div class="box_chk-group radio_group">
-                                                                            <input type="radio" id="ptcpType1" name="ptcpType" value="graduate" checked>
+                                                                            <input type="radio" id="ptcpType1" name="ptcpType" value="graduate" checked disabled>
                                                                             <label for="ptcpType1" class="ptcp_radiocustom">
                                                                                                 <span class="sr_only">선택지 1:</span>
                                                                                 <span class="label_text">&#9312; 졸업생 특화 프로그램을 운영하는 대학(원)의 졸업생, 졸업 유예자 및 예정자</span>
@@ -120,7 +120,7 @@
                                                                         </div>
 
                                                                         <div class="box_chk-group radio_group">
-                                                                            <input type="radio" id="ptcpType2" name="ptcpType" value="youth">
+                                                                            <input type="radio" id="ptcpType2" name="ptcpType" value="youth" disabled>
                                                                             <label for="ptcpType2" class="ptcp_radiocustom">
                                                                                                 <span class="sr_only">선택지 2:</span>
                                                                                 <span class="label_text">&#9313; ①에 해당하지 않는 직업계고 졸업생, 미취업 지역 청년</span>
