--- a/mobile/UI_ADHPChS08.html
+++ b/mobile/UI_ADHPChS08.html
@@ -433,7 +433,7 @@
                                 </div>
                             </div>
 
-                            <div class="box_table_wrap mt8">
+                            <div class="box_table_wrap top_linewrap mt8">
                                 <div>
                                     <div class="dt">예금주</div>
                                     <div class="dd">홍길동</div>
@@ -457,10 +457,10 @@
                                     <div class="dd">
                                         <fieldset class="radio_group radio_group_twin" disabled>
                                             <legend class="sr_only">미래내일 일경험사업 지원금 수령여부</legend>
-                                            <div class="new_radio_item">
+                                            <div class="new_radio_item w_full">
                                                 <input type="radio" id="지원금_예" name="미래내일 일경험사업 지원금 수령여부" checked>
                                                 <label for="지원금_예">예</label>
-                                                <div class="radio_input_item box_ipt new_ipt ml8">
+                                                <div class="new_ipt w_full ml8">
                                                     <input type="text" class="pay_input input_txt" id="훈련장려금액" name="훈련장려금액" value="1,000,000">
                                                     <span>원</span>
                                                 </div>
@@ -479,10 +479,10 @@
                                     <div class="dd">
                                         <fieldset class="radio_group radio_group_twin" disabled>
                                             <legend class="sr_only">내일배움카드 훈련장려금</legend>
-                                            <div class="new_radio_item">
+                                            <div class="new_radio_item w_full">
                                                 <input type="radio" id="훈련장려금_예" name="내일배움카드" checked>
                                                 <label for="훈련장려금_예">예</label>
-                                                <div class="radio_input_item box_ipt new_ipt ml8">
+                                                <div class="new_ipt w_full ml8">
                                                     <input type="text" class="pay_input input_txt" id="훈련장려금액" name="훈련장려금액" value="1,000,000">
                                                     <span>원</span>
                                                 </div>
