--- a/mobile/UI_ADHPChS06.html
+++ b/mobile/UI_ADHPChS06.html
@@ -351,10 +351,10 @@
                                     <div class="dd">
                                         <fieldset class="radio_group radio_group_twin" disabled>
                                             <legend class="sr_only">미래내일 일경험사업 지원금 수령여부</legend>
-                                            <div class="new_radio_item">
+                                            <div class="new_radio_item w_full">
                                                 <input type="radio" id="지원금_예" name="미래내일 일경험사업 지원금 수령여부" checked>
                                                 <label for="지원금_예">예</label>
-                                                <div class="radio_input_item box_ipt new_ipt ml8">
+                                                <div class="w_full new_ipt ml8">
                                                     <input type="text" class="pay_input input_txt" id="훈련장려금액" name="훈련장려금액" value="1,000,000">
                                                     <span>원</span>
                                                 </div>
@@ -373,10 +373,10 @@
                                     <div class="dd">
                                         <fieldset class="radio_group radio_group_twin" disabled>
                                             <legend class="sr_only">내일배움카드 훈련장려금</legend>
-                                            <div class="new_radio_item">
+                                            <div class="new_radio_item w_full">
                                                 <input type="radio" id="훈련장려금_예" name="내일배움카드" checked>
                                                 <label for="훈련장려금_예">예</label>
-                                                <div class="radio_input_item box_ipt new_ipt ml8">
+                                                <div class="w_full new_ipt ml8">
                                                     <input type="text" class="pay_input input_txt" id="훈련장려금액" name="훈련장려금액" value="1,000,000">
                                                     <span>원</span>
                                                 </div>
