--- a/mobile/UI_ADHPCdS05.html
+++ b/mobile/UI_ADHPCdS05.html
@@ -407,22 +407,19 @@
                                 </div>
                             </div>
 
-                            <div class="prog_wrap prog_applysummary box_group_wrap box_table_wrap">
-                                <h3 class="t2_sb mb16">신청 및 처리현황</h3>
-                                <div class="apply_summary_wrap" role="region">
+                            <div class="prog_wrap prog_applysummary box_group_wrap after_border">
+                                <h3 class="t2_sb">신청 및 처리현황</h3>
+                                <div class="apply_summary_wrap mt8" role="region">
                                     <div class="apply_summary_header">
                                         <div class="apply_summary_info  mb24">
                                             <i></i>
                                             <p class="apply_summary_tit">현재 참여신청서 <span>보완제출</span> 상태 입니다.</p>
                                             <p class="apply_summary_tel s1_r ">담당자 : 김담당 (010-0000-0000)</p>
                                         </div>
-                                        <div class="apply_summary_action off">
-                                            <button type="button" class="apply_summary_toggle" aria-expanded="false" aria-controls="applySummaryDetail"><span>신청 및 처리현황 이력 조회</span></button>
-                                        </div>
                                     </div>
 
                                     <!-- 버튼이 aria-expanded="true" 이면 보임 -->
-                                    <div class="apply_summary_inner" id="applySummaryDetail" hidden>
+                                    <div class="apply_summary_inner" id="applySummaryDetail">
                                         <ul>
                                             <li>
                                                 <div class="apply_summary_status">
@@ -435,42 +432,15 @@
                                                     <p class="status_label">보완제출</p>
                                                     <p class="status_date">2025-00-00</p>
                                                 </div>
-                                                <p class="apply_summary_reason">보완 내용 : <br> 대플 담당자가 등록한 불인정 사유 조회</p>
+                                                <p class="apply_summary_reason">보완내용 : <br> 대플 담당자가 등록한 보완 내용</p>
                                             </li>
                                         </ul>
-                                        <div class="apply_summary_action secon_action">
-                                            <button type="button" class="apply_summary_toggle" aria-expanded="tru" aria-controls="applySummaryDetail"><span>접기</span></button>
-                                        </div>
+                                    </div>
+                                    <div class="apply_summary_action secon_action">
+                                        <button type="button" class="apply_summary_toggle" aria-expanded="true" aria-controls="applySummaryDetail"><span class="">접기</span></button>
                                     </div>
                                 </div>
                             </div>
-                            <script>
-                                document.addEventListener('DOMContentLoaded', function () {
-                                    const toggleBtns = document.querySelectorAll('.apply_summary_toggle'); 
-                                    const detailArea = document.getElementById('applySummaryDetail');
-
-                                    toggleBtns.forEach(btn => {
-                                        btn.addEventListener('click', function () {
-                                            const isExpanded = btn.getAttribute('aria-expanded') === 'true';
-                                            const newState = !isExpanded;
-
-                                            toggleBtns.forEach(b => b.setAttribute('aria-expanded', String(newState)));
-
-                                            const firstBtnWrap = toggleBtns[0].closest('.apply_summary_action');
-                                            if (firstBtnWrap) {
-                                                firstBtnWrap.classList.toggle('on', newState);
-                                                firstBtnWrap.classList.toggle('off', !newState);
-                                            }
-
-                                            if (newState) {
-                                                detailArea.removeAttribute('hidden');
-                                            } else {
-                                                detailArea.setAttribute('hidden', '');
-                                            }
-                                        });
-                                    });
-                                });
-                            </script>
 
                             <div class="box_end_wrap" role="region" aria-label="제출 정보 영역">
                                 <div class="btn_box mt24">
