--- a/mobile/UI_ADHPCfS07.html
+++ b/mobile/UI_ADHPCfS07.html
@@ -62,16 +62,16 @@
                                     <div>
                                         <div class="dt"><span class="req_mark">취업지원유형</span></div>
                                         <div class="dd">
-                                            <fieldset class="radio_filed filed_row" disabled>
+                                            <fieldset class="radio_filed filed_row">
                                                 <legend class="sr_only">취업지원유형</legend>
                                                 <div class="new_radio_item">
-                                                    <input type="radio" id="자기주도형" name="취업지원유형" value="" role="radio" checked>
+                                                    <input type="radio" id="자기주도형" name="취업지원유형" value="" role="radio" disabled checked>
                                                     <label for="자기주도형" class="custom_radio">
                                                         <span class="label_text">자기주도형</span>
                                                     </label>
                                                 </div>
                                                 <div class="new_radio_item">
-                                                    <input type="radio" id="서비스참여형" name="취업지원유형" value=""role="radio" >
+                                                    <input type="radio" id="서비스참여형" name="취업지원유형" value=""role="radio" disabled >
                                                     <label for="서비스참여형" class="custom_radio">
                                                         <span class="label_text">서비스참여형</span>
                                                     </label>
