--- a/mobile/UI_ADHPChS08.html
+++ b/mobile/UI_ADHPChS08.html
@@ -175,16 +175,16 @@
                                     <div>
                                         <div class="dt">유형구분</div>
                                         <div class="dd">
-                                            <fieldset class="radio_group" disabled>
+                                            <fieldset class="radio_group">
                                                 <legend class="sr_only">유형구분</legend>
                                                 <div class="new_radio_item">
-                                                    <input type="radio" id="자기주도형" name="유형구분" value="" role="radio">
+                                                    <input type="radio" id="자기주도형" name="유형구분" value="" role="radio" disabled>
                                                     <label for="자기주도형">
                                                         <span class="label_text">자기주도형</span>
                                                     </label>
                                                 </div>
                                                 <div class="new_radio_item">
-                                                    <input type="radio" id="서비스참여형" name="유형구분" value="" role="radio" checked>
+                                                    <input type="radio" id="서비스참여형" name="유형구분" value="" role="radio" disabled checked>
                                                     <label for="서비스참여형">
                                                         <span class="label_text">서비스참여형</span>
                                                     </label>
