--- a/mobile/UI_ADHPCfS05.html
+++ b/mobile/UI_ADHPCfS05.html
@@ -95,7 +95,7 @@
                                     <div>
                                         <div class="dt"><span class="req_mark">희망진로</span></div>
                                         <div class="dd">
-                                            <fieldset class="radio_group">
+                                            <fieldset class="radio_group radio_group_twin">
                                                 <legend class="sr_only">희망진로</legend>
                                                 <div class="new_radio_item">
                                                     <input type="radio" id="일반취업" name="희망진로" value="" role="radio" checked>
@@ -169,7 +169,7 @@
                                     <div>
                                         <div class="dt"><span class="req_mark">목표근무지역</span></div>
                                         <div class="dd">
-                                            <fieldset class="radio_group">
+                                            <fieldset class="radio_group radio_group_twin">
                                                 <legend class="sr_only">목표근무지역</legend>
                                                 <div class="new_radio_item">
                                                     <input type="radio" id="수도권" name="목표근무지역" value="" role="radio" checked>
@@ -199,7 +199,7 @@
                                     <div>
                                         <div class="dt"><span class="req_mark">목표기업군</span></div>
                                         <div class="dd">
-                                            <fieldset class="radio_group">
+                                            <fieldset class="radio_group radio_group_twin">
                                                 <legend class="sr_only">목표기업군</legend>
                                                 <div class="new_radio_item">
                                                     <input type="radio" id="중소기업" name="목표기업군" value="" role="radio">
