--- a/pc/UI_ADHPCdS02.html
+++ b/pc/UI_ADHPCdS02.html
@@ -469,7 +469,7 @@
                                                                         <ul class="item_type radio_box_twin js_c">
                                                                             <li>
                                                                                 <div class="box_chk-group radio_group">
-                                                                                    <input type="radio" id="on2" name="institution">
+                                                                                    <input type="radio" id="onCampus2" name="institution">
                                                                                     <label for="onCampus2"><span>교내</span></label>
                                                                                 </div>
                                                                             </li>
