--- a/index_univ.html
+++ b/index_univ.html
@@ -653,12 +653,12 @@
                     <td>참여신청서</td>
                     <td>IAP관리(점프업)</td>
                     <td>점프업_IAP결과관리_등록(제출및저장전)</td>
-                    <td>UI_ADHPCgM02</td>
+                    <td>UI_ADHPCgS02</td>
                     <td class="status">완료</td>
                     <td></td>
                     <td>
-                        <a href="./pc/UI_ADHPCgM02.html" target="_blank">PC</a>
-                        <a href="./mobile/UI_ADHPCgM02.html" target="_blank">Mo</a>
+                        <a href="./pc/UI_ADHPCgS02.html" target="_blank">PC</a>
+                        <a href="./mobile/UI_ADHPCgS02.html" target="_blank">Mo</a>
                     </td>
                 </tr>
                 <tr>
@@ -669,12 +669,12 @@
                     <td>참여신청서</td>
                     <td>IAP관리(점프업)</td>
                     <td>점프업_IAP결과관리_수정(저장후제출전)</td>
-                    <td>UI_ADHPCgM03</td>
+                    <td>UI_ADHPCgS03</td>
                     <td class="status">완료</td>
                     <td></td>
                     <td>
-                        <a href="./pc/UI_ADHPCgM03.html" target="_blank">PC</a>
-                        <a href="./mobile/UI_ADHPCgM03.html" target="_blank">Mo</a>
+                        <a href="./pc/UI_ADHPCgS03.html" target="_blank">PC</a>
+                        <a href="./mobile/UI_ADHPCgS03.html" target="_blank">Mo</a>
                     </td>
                 </tr>
                 <tr>
@@ -685,12 +685,12 @@
                     <td>참여신청서</td>
                     <td>IAP관리(점프업)</td>
                     <td>점프업_IAP결과관리_조회(제출후)</td>
-                    <td>UI_ADHPCgM04</td>
+                    <td>UI_ADHPCgS04</td>
                     <td class="status">완료</td>
                     <td></td>
                     <td>
-                        <a href="./pc/UI_ADHPCgM04.html" target="_blank">PC</a>
-                        <a href="./mobile/UI_ADHPCgM04.html" target="_blank">Mo</a>
+                        <a href="./pc/UI_ADHPCgS04.html" target="_blank">PC</a>
+                        <a href="./mobile/UI_ADHPCgS04.html" target="_blank">Mo</a>
                     </td>
                 </tr>
                 <tr>
@@ -701,12 +701,12 @@
                     <td>참여신청서</td>
                     <td>IAP관리(점프업)</td>
                     <td>점프업_IAP결과관리_수정(보완요청_제출후)</td>
-                    <td>UI_ADHPCgM05</td>
+                    <td>UI_ADHPCgS05</td>
                     <td class="status">완료</td>
                     <td></td>
                     <td>
-                        <a href="./pc/UI_ADHPCgM05.html" target="_blank">PC</a>
-                        <a href="./mobile/UI_ADHPCgM05.html" target="_blank">Mo</a>
+                        <a href="./pc/UI_ADHPCgS05.html" target="_blank">PC</a>
+                        <a href="./mobile/UI_ADHPCgS05.html" target="_blank">Mo</a>
                     </td>
                 </tr>
                 <tr>
