--- a/mobile/UI_ADHPCeS02.html
+++ b/mobile/UI_ADHPCeS02.html
@@ -27,7 +27,7 @@
                         <!-- notice start -->
                         <div class="top_notice">
                             <i></i>
-                            <p><strong>각 문항은 하나의 답변만 가능합니다.</strong></p>
+                            <p>각 문항은 <strong>하나의 답변</strong>만 가능합니다.</p>
                             <button type="button" class="notice_expand ui-layer" data-my-layer="noticeLayer"><span class="blind">공지사항 열기</span></button>
                         </div>
                         <div class="bottom_layer type_title" tabindex="0" id="noticeLayer" style="z-index: 140; display: none;">
@@ -35,8 +35,8 @@
                             <div class="layer_contents" style="height: 216px;">
                                 <div class="notice_default">
                                     <ul class="list_style">
-                                        <li><strong>각 문항은 하나의 답변만 가능합니다.</strong></li>
-                                        <li><strong>각 문항별 점수는 다음과 같습니다.<br>: 전혀 그렇지 않다(1점), 그렇지 않은 편이다(2점), 보통이다(3점), 그렇다(4점), 매우 그렇다(5점)</strong></li>
+                                        <li>각 문항은 <strong>하나의 답변</strong>만 가능합니다.</li>
+                                        <li>각 문항별 점수는 다음과 같습니다.<br>: 전혀 그렇지 않다(1점), 그렇지 않은 편이다(2점), 보통이다(3점), 그렇다(4점), 매우 그렇다(5점)</li>
                                     </ul>
                                 </div>
                             </div>
