--- a/mobile/UI_ADHPCgS02.html
+++ b/mobile/UI_ADHPCgS02.html
@@ -2,7 +2,7 @@
 <html lang="ko">
     <head>
         <meta charset="UTF-8">
-        <title>점프업 - IAP결과관리_수정(저장후제출전)</title>
+        <title>점프업 - IAP결과관리_등록(제출및저장전)</title>
         <script src="../mobile/include/js/head.js"></script>
         <script src="../mobile/include/js/mobile-ui-util.js"></script>
         <script src="../mobile/include/js/mobile-ui.js"></script>
@@ -23,6 +23,29 @@
             <div class="contents">
                 <div class="mypage">
                     <div class="progmg allcare">
+                        <!-- notice start -->
+                        <div class="top_notice">
+                            <i></i>
+                            <p><strong>제출완료</strong> : IAP결과 제출건이 승인되지 않은 상태로 <strong>‘회수’</strong> 후 수정이 가능합니다.</p>
+                            <button type="button" class="notice_expand ui-layer" data-my-layer="noticeLayer"><span class="blind">공지사항 열기</span></button>
+                        </div>
+                        <div class="bottom_layer type_title" tabindex="0" id="noticeLayer" style="z-index: 140; display: none;">
+                            <strong class="title">안내</strong>
+                            <div class="layer_contents" style="height: 216px;">
+                                <div class="notice_default">
+                                    <ul class="list_style">
+                                        <li><strong>제출완료</strong> : IAP결과 제출건이 승인되지 않은 상태로 <strong>‘회수’</strong> 후 수정이 가능합니다.</li>
+                                        <li><strong>승인완료</strong> : 승인된 IAP결과는 수정이 불가합니다.</li>
+                                    </ul>
+                                </div>
+                            </div>
+                            <button type="button" class="layer_close">
+                                <span class="blind">레이어 닫기</span>
+                            </button>
+                        </div>
+                        <!-- notice end -->
+
+
                         <div class="tab_menu custom_split" data-target="tabContentsId1">
                             <ul>
                                 <li><button type="button" aria-selected="false">참여신청서</button></li>
@@ -106,12 +129,12 @@
                                         <div class="dt"><span class="req_mark">참여일자</span></div>
                                         <div class="dd dd_date_row">
                                             <div class="date_area">
-                                                <input type="text" title="참여기간 시작" id="참여기간" name="참여기간" value="2025-01-01" placeholder="YYYY-MM-DD" class="hasDatepicker valid" required=""><button type="button" class="btn_calendar ui-datepicker-trigger" title="달력선택"></button><input name="startDate" type="hidden" data-type="datepicker" value="">
+                                                <input type="text" title="참여기간 시작" id="참여기간" name="참여기간" value="" placeholder="YYYY-MM-DD" class="hasDatepicker valid" required=""><button type="button" class="btn_calendar ui-datepicker-trigger" title="달력선택"></button><input name="startDate" type="hidden" data-type="datepicker" value="">
                                                 <button type="button" class="calendar"><span>달력</span></button>
                                             </div>
                                             <span class="b1_sb">~</span>
                                             <div class="date_area">
-                                                <input type="text" title="참여기간 종료" id="참여기간" name="참여기간" value="2025-12-31" placeholder="YYYY-MM-DD" class="hasDatepicker valid" required=""><button type="button" class="btn_calendar ui-datepicker-trigger" title="달력선택"></button><input name="startDate" type="hidden" data-type="datepicker" value="">
+                                                <input type="text" title="참여기간 종료" id="참여기간" name="참여기간" value="" placeholder="YYYY-MM-DD" class="hasDatepicker valid" required=""><button type="button" class="btn_calendar ui-datepicker-trigger" title="달력선택"></button><input name="startDate" type="hidden" data-type="datepicker" value="">
                                                 <button type="button" class="calendar"><span>달력</span></button>
                                             </div>
                                         </div>
@@ -120,7 +143,7 @@
                                         <div class="dt"><span class="req_mark">참여시간</span></div>
                                         <div class="dd dd_row_ipt">
                                             <span class="box_ipt new_ipt">
-                                                <input type="text" class="input_txt" title="참여시간" placeholder="" value="100">
+                                                <input type="text" class="input_txt" title="참여시간" placeholder="">
                                                 <button type="reset" class="newbtn_del ico16_delete"><span class="blind">삭제</span></button>
                                             </span>
                                             <span class="s1_b row_ipt_txt">시간</span>
@@ -129,7 +152,6 @@
                                 </div>
                             </div>
                         </div>
-
 
                         <div class="after_border">
                             <div class="iap_attfile_wrap mt16">
@@ -150,24 +172,6 @@
                                         <input type="file" id="files" style="display: none;">
                                     </div>
                                 </div>
-                                <ul class="ul_iap_addlist mt16" id="fileList">
-                                    <li class="att_li">
-                                        <div class="att_li_txt"><p>파일명.pdf</p></div>
-                                        <div class="att_li_btn"><button type="button" class="att_del_btn"><span class="sr_only">첨부파일 삭제</span></button></div>
-                                    </li>
-                                    <li class="att_li">
-                                        <div class="att_li_txt"><p>파일명.pdf</p></div>
-                                        <div class="att_li_btn"><button type="button" class="att_del_btn"><span class="sr_only">첨부파일 삭제</span></button></div>
-                                    </li>
-                                    <li class="att_li">
-                                        <div class="att_li_txt"><p>파일명 파일명 파일명 파일명 파일명 파일명 파일명 파일명 파일명 파일명.pdf</p></div>
-                                        <div class="att_li_btn"><button type="button" class="att_del_btn"><span class="sr_only">첨부파일 삭제</span></button></div>
-                                    </li>
-                                    <li class="att_li">
-                                        <div class="att_li_txt"><p>파일명 파일명 파일명 파일명 파일명.pdf</p></div>
-                                        <div class="att_li_btn"><button type="button" class="att_del_btn"><span class="sr_only">첨부파일 삭제</span></button></div>
-                                    </li>
-                                </ul>
                             </div>
                         </div>
 
